--- a/pybackend/app.yaml
+++ b/pybackend/app.yaml
@@ -1,13 +1,13 @@
-runtime: python38
+runtime: python
+env: flex
+entrypoint: gunicorn -b :$PORT mysite.wsgi
 
-handlers:
-# This configures Google App Engine to serve the files in the app's static
-# directory.
-- url: /static
-  static_dir: static/
+runtime_config:
+  python_version: 3
 
-# This handler routes all requests not caught above to your main app. It is
-# required when static routes are defined, but can be omitted (along with
-# the entire handlers section) when there are no static files defined.
-- url: /.*
-  script: auto
+manual_scaling:
+  instances: 1
+resources:
+  cpu: 1
+  memory_gb: 0.5
+  disk_size_gb: 10
