--- a/pybackend/app.yaml
+++ b/pybackend/app.yaml
@@ -1,6 +1,6 @@
 runtime: python
 env: flex
-entrypoint: gunicorn -b :$PORT mysite.wsgi
+entrypoint: gunicorn -b :$PORT pybackend.wsgi
 
 runtime_config:
   python_version: 3
